--- a/assets/css/beautifuljekyll.css
+++ b/assets/css/beautifuljekyll.css
@@ -972,8 +972,8 @@ pre {
 }
 
 .box-success {
-  background-color: #98FB98;
-  border-left-color: #3CB371;
+  background-color: #3CB371;
+  border-left-color: #2e8c58;
 }
 
 /* --- Misc blog post styles --- */
