--- a/_includes/head.html
+++ b/_includes/head.html
@@ -172,4 +172,14 @@
     {% endfor %}
   {% endif %}
 
+
+  <!-- MathJax configuration for global font (e.g., STIX-Web) -->
+<script>
+window.MathJax = {
+  svg: {
+    font: 'STIX-Web'
+  }
+};
+</script>
+<script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js"></script>
 </head>
