--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ header.hero {
 
 .projects, .badges, .footer {
     padding: 2rem 1rem;
-    max-width: 900px;
+    max-width: 1000px;
     margin: auto;
 }
 
@@ -77,7 +77,7 @@ h2 {
     font-family: Arial, Helvetica, sans-serif;
     color: #f0f0f0;
     margin-top: 0.5rem;
-    max-width: 900px;
+    max-width: 1000px;
     text-align: left;
     margin-left: auto;    /* Center horizontally */
     margin-right: auto;   /* Center horizontally */
@@ -94,4 +94,10 @@ h2 {
 .newtest:hover {
     background-color: #ff0000;
     border-color: #ff00ff;
+}
+
+.btn-primary {
+    background-color: #fdd835; 
+    color: #000000; 
+    border-color:#fdd835;
 }
