--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
 header.hero {
     text-align: center;
     padding: 4rem 1rem;
-    background-color: #1e1e1e;
+    background-color: #121212;
 }
 
 main {
